testsuite/tests/parsing/assert_location.js.reference
Fatal error: exception File "assert_location.ml", line 6, characters 4-10: Assertion failed
